added dummy chat text

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 main {
-  background-color: #f0f0f0;
+  background-color: #05ffb0;
   margin: 20px auto;
   max-width: 450px;
   padding: 20px;
